2009-02-16  Adam Schrieber  <sadam@clemson.edu>

    * libseahorse/seahorse-object.c: Add context to string.  Fixes bug #571808

2009-02-16  Gabor Kelemen  <kelemeng@gnome.hu>

	* gkr/seahorse-gkr-keyring.c: Mark two strings for translation. Fixes bug #571991

2009-02-14  Adam Schreiber  <sadam@clemson.edu>

    * pkcs11/seahorse-pkcs11-commands.c: Add missing comma

2009-02-14  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	reviewed by: Stef Walter <stef@memberwebs.com>

	* pkcs11/seahorse-pkcs11-commands.c:
	(seahorse_pkcs11_commands_delete_objects):

	Use ngettext() where appropriate. Fixes bug #571778.

2009-02-14  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* src/seahorse-viewer.c: (on_copy_complete):
	Add translator comments.

2009-02-14  Stef Walter  <stef@memberwebs.com>

	* pgp/seahorse-pgp-generate.glade: Collapse key generate 
	'Advanced Options' by default.

2009-02-14  Stef Walter  <stef@memberwebs.com>

	* configure.in: Bump version number.

=== seahorse 2.25.91 ===

2009-02-14  Stef Walter  <stef@memberwebs.com>

	* NEWS:
	* README: Release version 2.25.91

2009-02-13  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkr-add-keyring.c: Fix problem with creation
	and destruction of the keyring create dialog. Fixes bug #548319
	
	* gkr/seahorse-gkr-add-keyring.c: Refresh keyrings after adding
	a keyring.
	
	* gkr/seahorse-gkr-keyring-commands.c: Prompt before deleting a keyring.
	
2009-02-13  Stef Walter  <stef@memberwebs.com>

	* reference/libcryptui/Makefile.am: Fix path-as-variable which
	prevents seahorse from building.
	
2009-02-12  Adam Schreiber  <sadam@clemson.edu>

    * gkr/seahorse-gkr-item-properties.glade.h:
    * src/seahorse-viewer.c: Add contexts for "delete" string.  
    Fixes bug #571359

    * help/C/figures/passphrase.png: (deleted)
    * help/C/figures/file-manager.png: (deleted)
    * help/C/figures/key-manager.png: (deleted)
    * help/C/figures/key-properties.png: (deleted)
    * help/C/figures/preferences.png: (deleted)