@@ -225,7 +225,11 @@ recalculate_usage (SeahorseObject *self)
 			desc = _("Credentials");
 			break;
 		case SEAHORSE_USAGE_IDENTITY:
-			desc = C_("This object is a means of storing items such as name, email address, etc. that make up one's digital identity.", "Identity");
+		    /*
+		     * Translators: "This object is a means of storing items such as 
+		     * name, email address, etc. that make up one's digital identity.
+		     */
+			desc = _("Identity");
 			break;
 		default:
 			desc = "";
