@@ -1,5 +1,8 @@
 2009-02-16  Adam Schrieber  <sadam@clemson.edu>
 
+    * libseahorse/seahorse-object.c: Change context to comment. 
+    Fixes bug #571808
+
     * libseahorse/seahorse-object.c: Add context to string.  Fixes bug #571808
 
 2009-02-16  Gabor Kelemen  <kelemeng@gnome.hu>
